namespace Anansi.Domain.Common;

public interface ITenantEntity
{
    Guid PhotographerId { get; set; }
}
